[package]
name = "git-pivotal-tracker-changelog"
version = "0.1.0"
authors = ["jpawar"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

regex = "1"
git2 = "0.13"

structopt = { version = "0.3" }
