[package]
name = "pivotal-tracker-changelog"
version = "0.0.1"
authors = ["Jaskanwal Pawar"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

regex = "1"
git2 = "0.13"

structopt = { version = "0.3" }
reqwest = { version = "0.10", features = ["json", "blocking"] }

futures = "0.3"
