[package]
name = "pivotal-tracker-changelog"
version = "0.1.0"
authors = ["Jaskanwal Pawar"]
edition = "2018"
description = "Utility to generate a change log of Pivotal Tracker story names for an input git repository and a range of git references"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1"
git2 = "0.13"
structopt = { version = "0.3" }
reqwest = { version = "0.10", features = ["json", "blocking"] }
futures = "0.3"
tokio = { version = "0.2", features = ["full"] }
